# lacoca

./: README.md  blink.py  esp32_sender.py  funciones.py  functions.py  graficas.py  ik.py  kinematica.py  main.py  pid.py  plots.py  pyproject.toml  sender.py  test.py  theta_generator.py  todo.txt  trayectoria.py  triangulo.py
generated_paths/: random_angles.csv  triangulo_angles.csv
kinematica/: main.py  pyproject.toml
kinematica/paths/: test.csv
lib/pid/: __init__.py
lib/receiver/: __init__.py
lib/servo/: __init__.py
lib/stepper/: __init__.py
paths/: cuadrado.csv  random.csv
